Uploaded image for project: 'Lustre'
  1. Lustre
  2. LU-16462

conf-sanity sles12.5 test_43a: lctl: attr.c:201: validate_nla: Assertion `0' failed.

XMLWordPrintable

    • Icon: Bug Bug
    • Resolution: Fixed
    • Icon: Minor Minor
    • Lustre 2.16.0
    • Lustre 2.16.0
    • None
    • 3
    • 9223372036854775807

      This issue was created by maloo for Andreas Dilger <adilger@whamcloud.com>

      This issue relates to the following test suite run on sles12.5 clients:
      https://testing.whamcloud.com/test_sets/258bf667-e863-4adb-af68-213f7877b909
      https://testing.whamcloud.com/test_sets/e3b187ad-af69-4bd1-b43c-583da240aef3

      test_43a failed with the following error:

      lctl dl
      BUG at file position attr.c:201:validate_nla
      lctl: attr.c:201: validate_nla: Assertion `0' failed.
      

      The same failure exists in a number of other subtests that also use "lctl dl":

      • sanity: test_33i, test_104d, test_154d
      • conf-sanity: test_43b, test_70c, test_91

      It looks like the validate_nla() function is part of libnl (netlink), so very likely relates to the new usage of netlink in "lctl dl" to get the device list.

      VVVVVVV DO NOT REMOVE LINES BELOW, Added by Maloo for auto-association VVVVVVV
      conf-sanity test_70c - set deactivate failed

            simmonsja James A Simmons
            maloo Maloo
            Votes:
            0 Vote for this issue
            Watchers:
            7 Start watching this issue

              Created:
              Updated:
              Resolved: